@@ -13,6 +13,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14910: Add allow_abbrev parameter to argparse.ArgumentParser. Patch by
+  Jonathan Paugh, Steven Bethard, paul j3 and Daniel Eriksson.
+
 - Issue #21717: tarfile.open() now supports 'x' (exclusive creation) mode.
 
 - Issue #23344: marshal.dumps() is now 20-25% faster on average.
